--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     </div>
 
 
-    <script src="script.js"></script>
-    <script src="string.js"></script>
+    <!--<script src="script.js"></script>
+    <script src="string.js"></script>-->
+    <!--<script src="arr.js"></script>
+    <script src="arr2.js"></script>-->
+    <script src="object.js"></script>
 </body>
 </html>
