--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="string.js"></script>-->
     <!--<script src="arr.js"></script>
     <script src="arr2.js"></script>-->
-    <script src="object.js"></script>
+    <!--<script src="object.js"></script>-->
+    <script src="fun.js"></script>
 </body>
 </html>
